--- a/Influxdb/Makefile
+++ b/Influxdb/Makefile
@@ -1,15 +1,15 @@
 CC = gcc
-CFLAGS = -Wall -Iinclude -O2
+CFLAGS = -Wall -I../include -O2
 
 SRCS = main.c \
-       src/sensirion_i2c_hal.c \
-       src/sensirion_i2c.c \
-       src/sensirion_common.c \
-       src/sen44_i2c.c \
-       src/scd30_i2c.c \
-       src/sfa3x_i2c.c \
-       src/sen66_i2c.c \
-       src/sen5x_i2c.c
+       ../src/sensirion_i2c_hal.c \
+       ../src/sensirion_i2c.c \
+       ../src/sensirion_common.c \
+       ../src/sen44_i2c.c \
+       ../src/scd30_i2c.c \
+       ../src/sfa3x_i2c.c \
+       ../src/sen66_i2c.c \
+       ../src/sen5x_i2c.c
 
 OBJS = $(SRCS:.c=.o)
 TARGET = sensors-db
@@ -17,6 +17,7 @@ TARGET = sensors-db
 .PHONY: all clean
 
 all: $(TARGET)
+        @echo "Build complete. Binary: $(TARGET)"
 
 $(TARGET): $(OBJS)
 	$(CC) $(CFLAGS) -o $@ $^ -lcurl
@@ -25,4 +26,4 @@ $(TARGET): $(OBJS)
 	$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJS) $(TARGET)
+	rm -f $(OBJS) $(TARGET
